mudança em html e css

--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ input{
 }
 
 fieldset legend, section h2{
-  font: 700 16px/140% "Roboto", sans-serif;
+  font: 700 16px/140% 'Roboto', sans-serif;
   color: #e1e1e6;
   padding-bottom: 16px;
 }
